--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
   <body>
-    <h1>2217216</h1>
-    <h3>TechWise Student</h3>
+    <h1>Blackjack</h1>
+    <h3>2217216</h3>
     <header>
       <nav>
         <ul>
