Finished friday hw

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
       <nav>
         <ul>
-          <li>About</li>
-          <li>Table</li>
+            <li><a href="./table.html">Table</a></li>
+            <li><a href="./index.html">About</a></li>
+            <li><a href="./rules.html">Rules</a></li>
         </ul>
       </nav>
     </header>
@@ -22,19 +23,6 @@
             <p>
                 Blackjack is a card game where players compete against the dealer. The goal of the game is to get your hand as close to 21 as possible without going over. The dealer will deal two cards to each player and two cards to themselves. One of the dealer's cards will be face up and the other will be face down. The players will then look at their cards and decide whether to hit or stand. If the player chooses to hit, they will be dealt another card. If they choose to stand, their turn will end and the next player will go. The dealer will then reveal their second card. If the dealer has a hand value of 16 or less, they must hit. If the dealer has a hand value of 17 or more, they must stand. After the dealer has finished their turn, the hands will be compared and the player with the closest hand value to 21 will win.
             </p>
-        </section>
-        <section>
-            <h2>Rules</h2>
-            <ul>
-                <li>Each player starts with two cards.</li>
-                <li>The dealer will deal two cards to each player and two cards to themselves. One of the dealer's cards will be face up and the other will be face down.</li>
-                <li>The players will then look at their cards and decide whether to hit or stand.</li>
-                <li>If the player chooses to hit, they will be dealt another card.</li>
-                <li>If they choose to stand, their turn will end and the next player will go.</li>
-                <li>The dealer will then reveal their second card.</li>
-                <li>If the dealer has a hand value of 16 or less, they must hit.</li>
-                <li>If the dealer has a hand value of 17 or more, they must stand.</li>
-                <li>After the dealer has finished their turn, the hands will be compared and the player with the closest hand value to 21 will win.</li>
         </section>
     </main>
     <footer>
