--- a/table.html
+++ b/table.html
@@ -10,8 +10,9 @@
     <header>
         <nav>
           <ul>
-            <li>About</li>
-            <li>Table</li>
+            <li><a href="./table.html">Table</a></li>
+            <li><a href="./index.html">About</a></li>
+            <li><a href="./rules.html">Rules</a></li>
           </ul>
         </nav>
     </header>
@@ -43,6 +44,12 @@
                 <dt>Stand</dt>
                 <dt>Split</dt>
             </dl>
+        </section>
+        <section>
+            <h3>Player's Actions</h3>
+            <button type="button" disabled>Hit</button>
+            <button type="button">Stand</button>
+            <button type="button">Split</button>
         </section>
     <footer>
         <p>&copy; Classy Development</p>
