--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./common.css">
   </head>
   <body>
     <h1>Blackjack</h1>
@@ -27,6 +29,7 @@
         </section>
     </main>
     <footer>
+      <span id="copyright">&copy;</span>
       <p>&copy; Classy Development</p>
   </body>
 </html>
