--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 			</p>
 			
 		</section>
+		<section class="disappearing"><p>this should disappear?</p></section>
+		<section class="mobileFeature"><p>this should be visible?</p></section>
 	</main>
 	<footer>
 	  <span id="copyright">&copy;</span>
