--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;700&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
+	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 	<link rel="stylesheet" href="./reset.css">
 	<link rel="stylesheet" href="./common.css">
 	<link rel="stylesheet" href="./about.css">
   </head>
   <body>
-	<h1>Blackjack</h1>
-	<h3>2217216</h3>
 	<header>
 	  <nav>
 		<ul>
