--- a/shell.html
+++ b/shell.html
@@ -12,11 +12,10 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;700&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin> -->
-    <title>Document</title>
+    <title>Shell</title>
 </head>
 <body>
     <script src="./shell.js"></script>
-    
     <section>
         <header class="mdc-top-app-bar background-color">
             <div class="mdc-top-app-bar__row">
