--- a/table.html
+++ b/table.html
@@ -48,7 +48,7 @@
         </section>
         <section id="playersActions" class="mdc-layout-grid__cell--span-6 mdc-card">
             <h3>Player's Actions</h3>
-            <button class="mdc-button">
+            <button class="mdc-button" id="hit-button">
                 <span class="mdc-button__ripple">
                 Hit
                 </span>
@@ -78,6 +78,8 @@
             <button type="button" data-user-hints=": ???">Insurance</button> -->
         </section>
     <footer>
+        <script src="./table.js"></script>
+        <script src="./shell.js"></script>
         <p>&copy; Classy Development</p>
     </footer>
 </body>
