fixed the bugging in console

--- a/table.html
+++ b/table.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming Table</title>
 	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;700&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com/%22%3E
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons%22%3E">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 	<link rel="stylesheet" href="./reset.css">
 	<link rel="stylesheet" href="./common.css">
@@ -103,7 +102,7 @@
         </section>
     <footer>
         <script src="./table.js"></script>
-        <script src="./shell.js"></script>
+        <!-- <script src="./shell.js"></script> -->
         <p>&copy; Classy Development</p>
     </footer>
 </body>
