--- a/table.html
+++ b/table.html
@@ -88,7 +88,7 @@
                 <label id="users-wager" class="mdc-text-field mdc-text-field--filled">
                     <span class="mdc-text-field__ripple"></span>
                     <span class="mdc-floating-label" id="my-label-id">Wager Amount</span>
-                    <input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
+                    <input class="mdc-text-field__input" type="number" aria-labelledby="my-label-id">
                     <span class="mdc-line-ripple"></span>
                 </label>
 
